--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1,10 +1,13 @@
 .header
 {
-    background-color: #4d4d4d;
+	background-image: url(earth-space-horizon-header.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: black;
     top: 0%;
     left: 0%;
     width: 100%;
-    height: 10%;
+    height: 18%;
     position: absolute;
 }
 
@@ -81,5 +84,32 @@
     position: absolute;
     top: 33%;
     font-family: "arial";
+}
+
+.titre
+{
+    position: absolute;
+    text-align: center;
+    z-index: 2;
+    top: 25%;
+    left: 40%;
+    font-weight: bold;
+    background-color: #008CBA;
+    padding: 30px 30px;
+    color: white;
+}
+
+.accueil 
+{
+    position: absolute;
+    text-align: center;
+    z-index: 2;
+    top: 45%;
+    left: 35%;
+    font-weight: bold;
+    background-color: white;
+    color : black;
+    border: 2px solid #008CBA;
+    padding: 30px 30px;
 }
 
