--- a/mainStyle.css
+++ b/mainStyle.css
@@ -69,12 +69,64 @@
     margin: 4px 2px;
     cursor: pointer;
 }
+
 .btnConnexion:hover 
 {
     background-color: #008CBA;
     color: white;
 }
 
+.btnMenuLink 
+{
+    border: none;
+    color:white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    background-color: silver;
+    color: black;
+    font-size: 16px;
+    margin: 0px 0px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    
+    /*display: inline-block;
+    font-family: 'universe';
+    font-weight: bold;*/
+}
+
+.btnDeco 
+{
+    top: -20px;
+    display: inline-block;
+    font-family: 'universe';
+    font-weight: bold;
+    padding: 8px 32px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    border: none;
+    font-size: 16px;
+    margin: 10px;
+    cursor: pointer;
+}
+
+.connecte
+{
+    display: inline-block;
+}
+
+.user
+{
+    position: absolute;
+    display: inline-block;
+    right: 5%;
+    top: 40%;
+    color: white;
+    font-weight: bold;
+    background-color: black;
+}
 
 .connexion
 {
