--- a/mainStyle.css
+++ b/mainStyle.css
@@ -42,6 +42,17 @@
     cursor: pointer;
 }
 
+.module
+{
+    position: absolute;
+    top: 20%;
+    width: 33%;
+    left:33%;
+    text-align: center;
+    font-family: 'universe';
+    display: inline-block;
+}
+
 .inputs 
 {
     background: #f5f5f5;
